# llm-wiki-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  README.zh-CN.md  USAGE.md  WIKI.md  pyproject.toml
.agents/skills/defuddle/: SKILL.md
.agents/skills/json-canvas/: SKILL.md
.agents/skills/markitdown-skill/: POST_INSTALL.md  README.md  SKILL.md  USAGE-GUIDE.md  package.json  reference.md
.agents/skills/obsidian-markdown/: SKILL.md
.agents/skills/obsidian-wiki-lint/: SKILL.md
.agents/skills/self-improving-agent/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
.agents/skills/source-extraction/: SKILL.md
.agents/skills/wiki-contract-review/: SKILL.md
docs/: acknowledgements.md  acknowledgements.zh-CN.md  gitignore-templates.md  gitignore-templates.zh-CN.md  markitdown-ocr.md  markitdown-ocr.zh-CN.md  references.md  references.zh-CN.md  source-lifecycle.md  source-lifecycle.zh-CN.md  usage.md  usage.zh-CN.md  wiki-page-templates.md  wiki-page-templates.zh-CN.md
scenarios/: README.md
scenarios/exam-study/: PROJECT.template.md  README.md  starter-pages.md
scripts/: init.ps1  init.sh  upgrade-manifest.txt  upgrade.ps1  upgrade.sh
skills/json-canvas/: SKILL.md
skills/markitdown-skill/: README.md
skills/obsidian-wiki-lint/: SKILL.md
skills/obsidian-wiki-lint/scripts/: crosslink_concepts.py  lint_wiki.py
skills/obsidian-wiki-lint/tests/: test_crosslink_concepts.py  test_lint_wiki.py
tests/: test_markitdown.py  test_package_scripts.py  test_skill_creator.py  test_source_contracts.py
(+43 files in other folders)
