[project]
name = "llm-wiki-agent"
version = "0.1.0"
description = "Agent package for maintaining an Obsidian LLM Wiki with raw-file intake."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "markitdown[all]>=0.1.5",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.0",
]

[tool.uv]
package = false
