[project]
name = "llm-wiki-agent"
version = "0.2.0"
description = "Agent package for maintaining an Obsidian LLM Wiki with raw-file intake."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "markitdown[audio-transcription,az-doc-intel,docx,outlook,pdf,pptx,xls,xlsx,youtube-transcription]>=0.1.6",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.0",
  "requests>=2.32.0",
]

[tool.uv]
package = false
